--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,12 +22,21 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.0-nullsafety.2
   flutter:
     sdk: flutter
+  get_it: ^7.2.0
+  googleapis: ^4.0.0
+  injectable: any
+  lint: any
 
 dev_dependencies:
+  build_runner: any
+  built_value_generator: any
+  freezed: any
   flutter_test:
     sdk: flutter
+  injectable_generator: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
