--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,21 +21,29 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  cloud_firestore: ^2.5.1
   cupertino_icons: ^1.0.2
   dartz: ^0.10.0-nullsafety.2
+  firebase_auth: ^3.1.0
+  firebase_core: ^1.6.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^7.2.0
   get_it: ^7.2.0
+  google_sign_in: ^5.0.7
   googleapis: ^4.0.0
+  hive: ^2.0.4
+  hive_generator: ^1.1.0
   injectable: any
   lint: any
+  path_provider: ^2.0.2
 
 dev_dependencies:
   build_runner: any
   built_value_generator: any
-  freezed: any
   flutter_test:
     sdk: flutter
+  freezed: any
   injectable_generator: any
 
 # For information on the generic Dart part of this file, see the
