--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,13 @@ environment:
 dependencies:
   auto_route: ^2.3.0
   auto_route_generator: any
+  cached_network_image: ^3.1.0
   cloud_firestore: ^2.5.1
+  contained_tab_bar_view:
+    git: https://github.com/slovnicki/contained_tab_bar_view
   cupertino_icons: ^1.0.2
   dartz: ^0.10.0-nullsafety.2
+  fancy_text_reveal: ^1.0.1
   firebase_auth: ^3.1.0
   firebase_core: ^1.6.0
   flutter:
@@ -33,7 +37,9 @@ dependencies:
   flutter_bloc: ^7.2.0
   flutter_screenutil: ^5.0.0+2
   flutter_svg: ^0.22.0
+  fluttertoast: ^8.0.8
   get_it: ^7.2.0
+  google_fonts: ^2.1.0
   google_sign_in: ^5.0.7
   googleapis: ^4.0.0
   hive: ^2.0.4
@@ -60,22 +66,23 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/imageassets/
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  fonts:
-    - family: Poppins
-      fonts:
-        - asset: assets/fonts/Poppins-Regular.ttf
-          # - asset: fonts/Schyler-Italic.ttf
-          style: normal
+    - assets/auth/
+    - assets/courses/
+    # An image asset can refer to one or more resolution-specific "variants", see
+    # https://flutter.dev/assets-and-images/#resolution-aware.
+    # For details regarding adding assets from package dependencies, see
+    # https://flutter.dev/assets-and-images/#from-packages
+    # To add custom fonts to your application, add a fonts section here,
+    # in this "flutter" section. Each entry in this list should have a
+    # "family" key with the font family name, and a "fonts" key with a
+    # list giving the asset and other descriptors for the font. For
+    # example:
+    # fonts:
+    #   - family: Poppins
+    #     fonts:
+    #       - asset: assets/fonts/Poppins-Regular.ttf
+    #         # - asset: fonts/Schyler-Italic.ttf
+    #         style: normal
     # - family: Trajan Pro
     #   fonts:
     #     - asset: fonts/TrajanPro.ttf
