--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
     package="com.sanjeev.classroom">
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="classroom"
-        android:icon="@mipmap/ic_launcher">
+        android:label="Classroom"
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
