--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,42 +18,42 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=3.2.4 <4.0.0'
 
 dependencies:
-  auto_route: ^2.3.0
+  auto_route: any
   auto_route_generator: any
-  cached_network_image: ^3.1.0
-  cloud_firestore: ^2.5.1
+  cached_network_image: ^3.3.1
+  cloud_firestore: ^4.14.0
   contained_tab_bar_view:
     git: https://github.com/slovnicki/contained_tab_bar_view
   cupertino_icons: ^1.0.2
-  custom_pop_up_menu: ^1.2.2
-  dartz: ^0.10.0-nullsafety.2
+  custom_pop_up_menu: ^1.2.4
+  dartz: ^0.10.1
   fancy_text_reveal: ^1.0.1
-  firebase_auth: ^3.1.0
-  firebase_core: ^1.6.0
+  firebase_auth: ^4.16.0
+  firebase_core: ^2.24.2
   flutter:
     sdk: flutter
-  flutter_bloc: ^7.2.0
-  flutter_phoenix: ^1.0.0
-  flutter_screenutil: ^5.0.0+2
-  flutter_speed_dial: ^4.3.0
-  flutter_svg: ^0.22.0
-  fluttertoast: ^8.0.8
-  get_it: ^7.2.0
-  google_fonts: ^2.1.0
-  google_sign_in: ^5.0.7
-  googleapis: ^4.0.0
-  hive: ^2.0.4
+  flutter_bloc: ^8.1.3
+  flutter_phoenix: ^1.1.1
+  flutter_screenutil: ^5.9.0
+  flutter_speed_dial: ^7.0.0
+  flutter_svg: ^2.0.9
+  fluttertoast: ^8.2.4
+  get_it: ^7.6.6
+  google_fonts: ^6.1.0
+  google_sign_in: ^6.2.1
+  googleapis: ^12.0.0
+  hive: ^2.2.3
   hive_generator: ^1.1.0
   injectable: any
   lint: any
-  lottie: ^1.1.0
-  path_provider: ^2.0.2
+  lottie: ^3.0.0
+  path_provider: ^2.1.2
 
 dev_dependencies:
-  flutter_launcher_icons: ^0.9.2
+  flutter_launcher_icons: ^0.13.1
   build_runner: any
   built_value_generator: any
   flutter_test:
